--- a/javascript/src/styles/icon-font.css
+++ b/javascript/src/styles/icon-font.css
@@ -119,3 +119,9 @@
 .icon-pencil:before {
   content: "\41";
 }
+.icon-exclamation-triangle:before {
+  content: "\42";
+}
+.icon-child:before {
+  content: "\43";
+}
